# emerging_technologies

./: .gitignore  Lab1_qiskit_measurement.ipynb  README.md  main.py  project.ipynb  pyproject.toml  qubits_single.ipynb  requirements.txt  tasks.ipynb
assessment/: README.md  assessment.md  faq.ipynb  guidance.ipynb  instructions.md  problems.md  repo.md  tasks.md
materials/: README.md  binary_representations.ipynb  cli.md  computability.ipynb  computational_complexity.ipynb  cube_roots.ipynb  environment.ipynb  functional_programming.ipynb  hash_functions.ipynb  prime_numbers.ipynb  proof_of_work.ipynb  sha256.ipynb  sympy.ipynb  turing_machines.ipynb
materials/ai/: chargpt.py  claude.md  gemini.md  gemini_deep_research.md  grok.md  prompt.md
materials/ibm/: 01-single-systems.ipynb
